// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshot 1`] = `
.c2 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
  line-height: inherit;
}

.c1 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: var(--red);
  box-shadow: 0 4px 0 0 var(--red-dark);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
}

.c1:hover {
  cursor: pointer;
}

.c1:hover {
  background-color: var(--red-light);
}

.c1:active {
  box-shadow: 0 2px 0 0 var(--red-dark);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <button
      class="c1"
      type="submit"
    >
      <span
        class="c2 c3"
      >
        test
      </span>
    </button>
  </span>
</div>
`;

exports[`button snapshot 2`] = `
.c2 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
  line-height: inherit;
}

.c1 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: var(--red);
  box-shadow: 0 4px 0 0 var(--red-dark);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
}

.c1:hover {
  cursor: pointer;
}

.c1:hover {
  background-color: var(--red-light);
}

.c1:active {
  box-shadow: 0 2px 0 0 var(--red-dark);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      <span
        class="c2 c3"
      >
        test
      </span>
    </button>
  </span>
</div>
`;

exports[`button snapshot 3`] = `
.c11 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-top: .3rem;
  padding-left: .3rem;
}

.c12 {
  position: relative;
  line-height: inherit;
}

.c2 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: var(--red);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
  -webkit-transform: translate(-.3rem,-.3rem);
  -ms-transform: translate(-.3rem,-.3rem);
  transform: translate(-.3rem,-.3rem);
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
}

.c2:hover {
  cursor: pointer;
}

.c2:hover {
  background-color: var(--red-light);
}

.c2:active {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c4 {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 100% 0%;
  -ms-transform-origin: 100% 0%;
  transform-origin: 100% 0%;
  width: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem);
  -ms-transform: translate(.3rem,.3rem);
  transform: translate(.3rem,.3rem);
}

.c1:active .c3 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

.c8 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 0px 100%;
  -ms-transform-origin: 0px 100%;
  transform-origin: 0px 100%;
  height: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem) scaleY(1);
  -ms-transform: translate(.3rem,.3rem) scaleY(1);
  transform: translate(.3rem,.3rem) scaleY(1);
}

.c1:active .c7 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

.c6 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
  border-left: .3rem solid transparent;
  border-right: .3rem solid transparent;
  border-top: .3rem solid var(--red-dark);
  -webkit-transform-origin: center bottom;
  -ms-transform-origin: center bottom;
  transform-origin: center bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(0rem,.3rem) scale(1);
  -ms-transform: translate(0rem,.3rem) scale(1);
  transform: translate(0rem,.3rem) scale(1);
}

.c1:active .c5 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

.c10 {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 0px;
  height: 0px;
  border-left: 0rem solid transparent;
  border-right: .3rem solid transparent;
  border-bottom: .3rem solid var(--red-dark);
  -webkit-transform-origin: right bottom;
  -ms-transform-origin: right bottom;
  transform-origin: right bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,0rem) scale(1);
  -ms-transform: translate(.3rem,0rem) scale(1);
  transform: translate(.3rem,0rem) scale(1);
}

.c1:active .c9 {
  -webkit-transform: translate(0rem,-.3rem) scale(0);
  -ms-transform: translate(0rem,-.3rem) scale(0);
  transform: translate(0rem,-.3rem) scale(0);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <button
      class="c1 c2"
      type="button"
    >
      <span
        class="c3 c4"
      />
      <span
        class="c5 c6"
      />
      <span
        class="c7 c8"
      />
      <span
        class="c9 c10"
      />
      <span
        class="c11 c12"
      >
        test
      </span>
    </button>
  </span>
</div>
`;

exports[`link snapshot 1`] = `
.c2 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
  line-height: inherit;
}

.c1 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: var(--red);
  box-shadow: 0 4px 0 0 var(--red-dark);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
}

.c1:hover {
  cursor: pointer;
}

.c1:hover {
  background-color: var(--red-light);
}

.c1:active {
  box-shadow: 0 2px 0 0 var(--red-dark);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2 c3"
      >
        test
      </span>
    </a>
  </span>
</div>
`;

exports[`link snapshot 2`] = `
.c11 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--white);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c12 {
  position: relative;
  line-height: inherit;
}

.c2 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: var(--red);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
  -webkit-transform: translate(-.3rem,-.3rem);
  -ms-transform: translate(-.3rem,-.3rem);
  transform: translate(-.3rem,-.3rem);
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
}

.c2:hover {
  cursor: pointer;
}

.c2:hover {
  background-color: var(--red-light);
}

.c2:active {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c4 {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 100% 0%;
  -ms-transform-origin: 100% 0%;
  transform-origin: 100% 0%;
  width: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem);
  -ms-transform: translate(.3rem,.3rem);
  transform: translate(.3rem,.3rem);
}

.c1:active .c3 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

.c8 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: var(--red-dark);
  -webkit-transform-origin: 0px 100%;
  -ms-transform-origin: 0px 100%;
  transform-origin: 0px 100%;
  height: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem) scaleY(1);
  -ms-transform: translate(.3rem,.3rem) scaleY(1);
  transform: translate(.3rem,.3rem) scaleY(1);
}

.c1:active .c7 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

.c6 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
  border-left: .3rem solid transparent;
  border-right: .3rem solid transparent;
  border-top: .3rem solid var(--red-dark);
  -webkit-transform-origin: center bottom;
  -ms-transform-origin: center bottom;
  transform-origin: center bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(0rem,.3rem) scale(1);
  -ms-transform: translate(0rem,.3rem) scale(1);
  transform: translate(0rem,.3rem) scale(1);
}

.c1:active .c5 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

.c10 {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 0px;
  height: 0px;
  border-left: 0rem solid transparent;
  border-right: .3rem solid transparent;
  border-bottom: .3rem solid var(--red-dark);
  -webkit-transform-origin: right bottom;
  -ms-transform-origin: right bottom;
  transform-origin: right bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,0rem) scale(1);
  -ms-transform: translate(.3rem,0rem) scale(1);
  transform: translate(.3rem,0rem) scale(1);
}

.c1:active .c9 {
  -webkit-transform: translateY(-.3rem) scale(0);
  -ms-transform: translateY(-.3rem) scale(0);
  transform: translateY(-.3rem) scale(0);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <a
      class="c1 c2"
      href="#test2"
    >
      <span
        class="c3 c4"
      />
      <span
        class="c5 c6"
      />
      <span
        class="c7 c8"
      />
      <span
        class="c9 c10"
      />
      <span
        class="c11 c12"
      >
        test 2
      </span>
    </a>
  </span>
</div>
`;

exports[`secondary button and link snapshot 1`] = `
.c2 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--black);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
  line-height: inherit;
}

.c1 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: var(--white);
  border: 1px solid var(--black);
  box-shadow: 0 4px 0 0 var(--black);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
}

.c1:hover {
  cursor: pointer;
}

.c1:active {
  box-shadow: 0 2px 0 0 var(--black);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2 c3"
      >
        test
      </span>
    </a>
  </span>
</div>
`;

exports[`secondary button and link snapshot 2`] = `
.c2 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--black);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
  line-height: inherit;
}

.c1 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: var(--white);
  border: 1px solid var(--black);
  box-shadow: 0 4px 0 0 var(--black);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
}

.c1:hover {
  cursor: pointer;
}

.c1:active {
  box-shadow: 0 2px 0 0 var(--black);
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      <span
        class="c2 c3"
      >
        test 2
      </span>
    </button>
  </span>
</div>
`;

exports[`secondary offset button and link snapshot 1`] = `
.c11 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--black);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c12 {
  position: relative;
  line-height: inherit;
}

.c2 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  color: var(--black);
  background-color: var(--white);
  border: 1px solid var(--black);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
  -webkit-transform: translate(-.3rem,-.3rem);
  -ms-transform: translate(-.3rem,-.3rem);
  transform: translate(-.3rem,-.3rem);
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
}

.c2:hover {
  cursor: pointer;
}

.c2:active {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c4 {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 0px;
  background: var(--black);
  -webkit-transform-origin: 100% 0%;
  -ms-transform-origin: 100% 0%;
  transform-origin: 100% 0%;
  width: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem);
  -ms-transform: translate(.3rem,.3rem);
  transform: translate(.3rem,.3rem);
}

.c1:active .c3 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

.c8 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: var(--black);
  -webkit-transform-origin: 0px 100%;
  -ms-transform-origin: 0px 100%;
  transform-origin: 0px 100%;
  height: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem) scaleY(1);
  -ms-transform: translate(.3rem,.3rem) scaleY(1);
  transform: translate(.3rem,.3rem) scaleY(1);
}

.c1:active .c7 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

.c6 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
  border-left: .3rem solid transparent;
  border-right: .3rem solid transparent;
  border-top: .3rem solid var(--black);
  -webkit-transform-origin: center bottom;
  -ms-transform-origin: center bottom;
  transform-origin: center bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(0rem,.3rem) scale(1);
  -ms-transform: translate(0rem,.3rem) scale(1);
  transform: translate(0rem,.3rem) scale(1);
}

.c1:active .c5 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

.c10 {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 0px;
  height: 0px;
  border-left: 0rem solid transparent;
  border-right: .3rem solid transparent;
  border-bottom: .3rem solid var(--black);
  -webkit-transform-origin: right bottom;
  -ms-transform-origin: right bottom;
  transform-origin: right bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,0rem) scale(1);
  -ms-transform: translate(.3rem,0rem) scale(1);
  transform: translate(.3rem,0rem) scale(1);
}

.c1:active .c9 {
  -webkit-transform: translateY(-.3rem) scale(0);
  -ms-transform: translateY(-.3rem) scale(0);
  transform: translateY(-.3rem) scale(0);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <a
      class="c1 c2"
      href="#"
    >
      <span
        class="c3 c4"
      />
      <span
        class="c5 c6"
      />
      <span
        class="c7 c8"
      />
      <span
        class="c9 c10"
      />
      <span
        class="c11 c12"
      >
        test
      </span>
    </a>
  </span>
</div>
`;

exports[`secondary offset button and link snapshot 2`] = `
.c11 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--black);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-top: .3rem;
  padding-left: .3rem;
}

.c12 {
  position: relative;
  line-height: inherit;
}

.c2 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  color: var(--black);
  background-color: var(--white);
  border: 1px solid var(--black);
  padding: 1rem 2rem 0.8rem;
  -webkit-transition: background-color var(--transition-short);
  transition: background-color var(--transition-short);
  -webkit-transform: translate(-.3rem,-.3rem);
  -ms-transform: translate(-.3rem,-.3rem);
  transform: translate(-.3rem,-.3rem);
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
}

.c2:hover {
  cursor: pointer;
}

.c2:active {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c4 {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 0px;
  background: var(--black);
  -webkit-transform-origin: 100% 0%;
  -ms-transform-origin: 100% 0%;
  transform-origin: 100% 0%;
  width: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem);
  -ms-transform: translate(.3rem,.3rem);
  transform: translate(.3rem,.3rem);
}

.c1:active .c3 {
  -webkit-transform: translate(0rem,0rem) scaleX(0);
  -ms-transform: translate(0rem,0rem) scaleX(0);
  transform: translate(0rem,0rem) scaleX(0);
}

.c8 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background: var(--black);
  -webkit-transform-origin: 0px 100%;
  -ms-transform-origin: 0px 100%;
  transform-origin: 0px 100%;
  height: .3rem;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,.3rem) scaleY(1);
  -ms-transform: translate(.3rem,.3rem) scaleY(1);
  transform: translate(.3rem,.3rem) scaleY(1);
}

.c1:active .c7 {
  -webkit-transform: translate(0rem,0rem) scaleY(0);
  -ms-transform: translate(0rem,0rem) scaleY(0);
  transform: translate(0rem,0rem) scaleY(0);
}

.c6 {
  position: absolute;
  bottom: 0px;
  left: 0px;
  width: 0px;
  height: 0px;
  border-left: .3rem solid transparent;
  border-right: .3rem solid transparent;
  border-top: .3rem solid var(--black);
  -webkit-transform-origin: center bottom;
  -ms-transform-origin: center bottom;
  transform-origin: center bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(0rem,.3rem) scale(1);
  -ms-transform: translate(0rem,.3rem) scale(1);
  transform: translate(0rem,.3rem) scale(1);
}

.c1:active .c5 {
  -webkit-transform: translate(-.3rem,0rem) scale(0);
  -ms-transform: translate(-.3rem,0rem) scale(0);
  transform: translate(-.3rem,0rem) scale(0);
}

.c10 {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 0px;
  height: 0px;
  border-left: 0rem solid transparent;
  border-right: .3rem solid transparent;
  border-bottom: .3rem solid var(--black);
  -webkit-transform-origin: right bottom;
  -ms-transform-origin: right bottom;
  transform-origin: right bottom;
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  -webkit-transform: translate(.3rem,0rem) scale(1);
  -ms-transform: translate(.3rem,0rem) scale(1);
  transform: translate(.3rem,0rem) scale(1);
}

.c1:active .c9 {
  -webkit-transform: translate(0rem,-.3rem) scale(0);
  -ms-transform: translate(0rem,-.3rem) scale(0);
  transform: translate(0rem,-.3rem) scale(0);
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <button
      class="c1 c2"
      type="button"
    >
      <span
        class="c3 c4"
      />
      <span
        class="c5 c6"
      />
      <span
        class="c7 c8"
      />
      <span
        class="c9 c10"
      />
      <span
        class="c11 c12"
      >
        test 2
      </span>
    </button>
  </span>
</div>
`;

exports[`tertiary button and link snapshot 1`] = `
.c3 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--red-dark);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
  padding-bottom: 4px;
}

.c4 {
  position: relative;
  line-height: inherit;
}

.c1 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: transparent;
}

.c1:hover {
  cursor: pointer;
}

.c1 .c2::after {
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  content: '';
  display: block;
  position: absolute;
  height: 1px;
  width: 100%;
  max-width: 0%;
  right: 0;
  left: auto;
  background-color: currentColor;
}

.c1:hover .c2::after,
.c1:focus .c2::after {
  max-width: 100%;
  top: 100%;
  left: 0;
  right: auto;
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2 c3 c4"
      >
        test
      </span>
    </a>
  </span>
</div>
`;

exports[`tertiary button and link snapshot 2`] = `
.c3 {
  line-height: 0.9;
  font-size: 2rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 700;
  color: var(--red);
  text-transform: uppercase;
}

.c0 {
  display: inline-block;
}

.c4 {
  position: relative;
  line-height: inherit;
}

.c5 .c2::after {
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  content: '';
  display: block;
  position: absolute;
  height: 1px;
  width: 100%;
  max-width: 0%;
  right: 0;
  left: auto;
  background-color: currentColor;
}

.c5:hover .c2::after,
.c5:focus .c2::after {
  max-width: 100%;
  top: 100%;
  left: 0;
  right: auto;
}

.c1 {
  position: relative;
  border: none;
  display: block;
  padding: 0;
  text-align: center;
  background-color: transparent;
}

.c1:hover {
  cursor: pointer;
}

.c1 .c2::after {
  -webkit-transition: var(--transition-short);
  transition: var(--transition-short);
  content: '';
  display: block;
  position: absolute;
  height: 1px;
  width: 100%;
  max-width: 0%;
  right: 0;
  left: auto;
  background-color: currentColor;
}

.c1:hover .c2::after,
.c1:focus .c2::after {
  max-width: 100%;
  top: 100%;
  left: 0;
  right: auto;
}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      <span
        class="c2 c3 c4"
      >
        test 2
      </span>
    </button>
  </span>
</div>
`;
